@@ -1,3 +1,7 @@
+2007-06-29  George Giolfan  <georgegiolfan@yahoo.com>
+
+	* TabItemTest.cs: Added or expanded some tests.
+
 2007-06-28  George Giolfan  <georgegiolfan@yahoo.com>
 
 	* TabControlTest.cs, TabItemTest.cs: Added or expanded some tests.
